--- a/.github/workflows/gcs-integration.yml
+++ b/.github/workflows/gcs-integration.yml
@@ -37,9 +37,9 @@ jobs:
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0
       with:
-        service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_email: ${{ GCP_SA_EMAIL }}
+        service_account_key: ${{ GCP_SA_KEY }}
+        project_id: ${{ GCP_PROJECT_ID }}
 
     - uses: 'actions/setup-node@v3'
       with:
