--- a/.github/workflows/gcs-integration.yml
+++ b/.github/workflows/gcs-integration.yml
@@ -18,6 +18,7 @@ env:
   GCP_PROJECT_ID: "tarifftales-website"
   GCP_SA_EMAIL: ${{ secrets.GCP_SA_EMAIL }} 
   GCP_SA_KEY: ${{ secrets.GCP_SA_PRIVATE_KEY }} 
+  GCP_SA_JSON: ${{secrets.GCP_SA_JSON}}
 
 # permissions:
 #  contents: read
@@ -35,11 +36,16 @@ jobs:
     - uses: 'actions/checkout@v3'
 
     # Setup gcloud CLI
-    - uses: google-github-actions/setup-gcloud@v0
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
       with:
-        service_account_email: ${{ env.GCP_SA_EMAIL }}
-        service_account_key: ${{ env.GCP_SA_KEY }}
-        project_id: ${{ env.GCP_PROJECT_ID }}
+        credentials_json: '${{ env.GCP_SA_JSON }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
 
     - uses: 'actions/setup-node@v3'
       with:
