--- a/.github/workflows/gcs-integration.yml
+++ b/.github/workflows/gcs-integration.yml
@@ -1,4 +1,4 @@
-v# This workflow will build and push the SPA application to GCS bucket when code change is committed.
+# This workflow will build and push the SPA application to GCS bucket when code change is committed.
 
 name: Deploy SPA app to GCP Cloud Storage bucket
 
