--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "jspdf": "^2.5.1",
