--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-super-responsive-table": "^5.2.1",
     "react-switch": "^7.0.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.5",
     "redux-saga": "^1.2.2",
     "sass": "^1.67.0",
