--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.1.1",
     "classnames": "^2.3.2",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "eslint": "^8.30.0",
